# genankiai

./: README.md  pyproject.toml
ankihistory/: config.py  main.py  utils.py
